# Neural-network

OpenCL_network/: CMakeLists.txt  yolov1-tiny.cfg
OpenCL_network/src/: cl_device.c  cl_device.h  main.c  tags.x2pMYg
OpenCL_network/src/NeuralNetwork/: nn_layers.c  nn_layers.h  nn_network.c  nn_network.h
OpenCL_network/src/NeuralNetwork/CPU/: nn_cpu_activation.c  nn_cpu_activation.h  nn_cpu_connected_layer.c  nn_cpu_connected_layer.h  nn_cpu_convolution_layer.c  nn_cpu_convolution_layer.h  nn_cpu_local_layer.c  nn_cpu_local_layer.h  nn_cpu_maxpool_layer.c  nn_cpu_maxpool_layer.h  nn_cpu_network.c  nn_cpu_network.h  nn_cpu_operations.c  nn_cpu_operations.h  nn_cpu_region_layer.c  nn_cpu_region_layer.h
OpenCL_network/src/NeuralNetwork/CPU/nn_cpu_vectors/: float4.h  float8.h  int4.h  longlong2.h
OpenCL_network/src/NeuralNetwork/CPU/x86/: nn_cpu_convolution_x86.c  nn_cpu_convolution_x86.h
OpenCL_network/src/NeuralNetwork/File/: file.c  file.h
OpenCL_network/src/NeuralNetwork/OpenCL/: nn_cl_convolution_layer.c  nn_cl_convolution_layer.h
OpenCL_network/src/NeuralNetwork/Parser/: cfg_net.h
OpenCL_network/src/NeuralNetwork/Parser/cfg_darknet/: cfg_parser.c  cfg_parser.h  cfg_reader.c  cfg_reader.h
OpenCL_network/src/NeuralNetwork/Parser/weight_darknet/: weight_reader.c  weight_reader.h
OpenCL_network/src/random/: random.c  random.h
